--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -1,6 +1,3 @@
-<form action="/api/login" method="post">
-        <label>Nombre</label>
-        <input type="text" name="nombreUsuario" placeholder="Nombre" id="nombreUsuario">
-        <input type="submit" value="LogIn">
-</form>
-<a href="/auth/facebook">Iniciar Sesión con Facebook</a>
+<div class="contenedor">
+    <button><a href="/auth/facebook" class="boton">Iniciar Sesión con Facebook</a></button>
+</div>
